Item1772: second pass; time for the artists to step in, I suspect....
git-svn-id: http://svn.foswiki.org/trunk@4304 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -35,14 +35,8 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
      <li><span class='warn'>Warnings</span> are non-fatal, but are often a good
       indicator that something that is wrong.</li>
      <li><b><font color="#f00">EXPERT</font></b> means a setting is for expert use only. You should not fiddle with it unless you know what you are doing, or at least have read all the documentation.
-     <div class="expert" style="display:none">
-      <strong>EXPERT options are currently displayed</strong>
-      <input type="button" class="foswikiButton" value="Hide expert options" onclick="toggleExpertsMode()"/>
-     </div>
-     <div class="notExpert">
-      EXPERT options are hidden unless you click the button:
-      <input type="button" class="foswikiButton" value="Yes, I've read all the documentation" onclick="toggleExpertsMode()"/>
-     </div>
+      EXPERT options are hidden unless you click the "Show EXPERT options"
+      button
     </li>
    </ul>
  </div><!--/foswikiLeft -->
