--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -34,7 +34,13 @@
          <div id="patternTopic">
           <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
 <h1>Configuration</h1>
-<p><strong>Use this page to set the configuration options for Foswiki.
+<div class="expert" style="float:right;display:none">
+ <input type="button" class="expert" value="Hide EXPERT options" onclick="toggleExpertsMode()"/>
+</div>
+<div class="notExpert" style="float:right">
+ <input type="button" class="notExpert" value="Show EXPERT options" onclick="toggleExpertsMode()"/>
+</div>
+<strong>Use this page to set the configuration options for Foswiki.
 Select the sections using the buttons below and fill in the settings.
-Then  press 'Next' to save.</strong><br>Hover the mouse over any setting to
-get help on that setting.</p>
+<br />Then  press 'Next' to save.</strong><br>Hover the mouse over any
+setting to get help.
