Item1772: tidy up classes, fix some formatting problems. It may not look as beautiful, but it's easier to navigate (IMHO) and easier to switch in new themes
git-svn-id: http://svn.foswiki.org/trunk@4311 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/footer.html
+++ b/core/lib/Foswiki/Configure/resources/footer.html
@@ -8,8 +8,8 @@
    </div><!-- /patternPageShadow-->
   </div><!-- /patternScreen-->
  </div><!-- /patternNoViewPage -->
- <div id="ttDelta" class="tooltip">
- Click to reset to the default value, which is:&nbsp:
+ <div id="ttDelta" class="configureTooltip">
+ Click to reset to the default value, which is:&nbsp;
  </div>
 </body>
 </html>
