--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -28,15 +28,13 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
    </div><!--/foswikiLeft-->
    <div class="foswikiLeft" style="width:45%; margin-left:1em;">Explanation of colours and symbols:
     <ul style="margin-top:0;">
-     <li>Settings marked <span class='mandatory'>like this</span> are required
+     <li>Settings marked <span class='configureMandatory'>like this</span> are required
       (they must have a value).</li>
-     <li>Any <span class='error'>errors</span> in your configuration will be
+     <li><span class='configureError'>Errors</span> in your configuration will be
       highlighted.</li>
-     <li><span class='warn'>Warnings</span> are non-fatal, but are often a good
+     <li><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
       indicator that something that is wrong.</li>
-     <li><b><font color="#f00">EXPERT</font></b> means a setting is for expert use only. You should not fiddle with it unless you know what you are doing, or at least have read all the documentation.
-      EXPERT options are hidden unless you click the "Show EXPERT options"
-      button
+     <li><span class="configureExpert configureNotExpert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
     </li>
    </ul>
  </div><!--/foswikiLeft -->
