--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -1,7 +1,6 @@
-<div class="foswikiHelp">
+<h2 class="firstHeader">Introduction</h2>
  <div class="foswikiLeft" style="width:45%;">
-  <ul>
-   <li><b>If your Foswiki site is already working</b>, continue to
+<p><strong>If your Foswiki site is already working</strong>, continue to
     <a rel="nofollow" onmouseover="Tip(getTip('navAway'))" onmouseout="UnTip()" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/WebHome">
 browse to the Foswiki WebHome</a>.
 <br />
@@ -11,20 +10,19 @@ sections on <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWE
 authentication</a> and
 <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/AccessControl">
 access control</a>, and the 'Security' section.
-    </li>
-    <li><b>To become an administrator</b> you need to first <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserRegistration">
+</p>
+<p>To become an <strong>administrator</strong> you need to first <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserRegistration">
 register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%USERSWEB%/%ADMINGROUP%">
  %ADMINGROUP%</a> and add that user to the GROUP setting (follow the text in yellow).
-    </li>
-    <li>
-     <b>If you are on a non-standard platform or environment</b> there are a lot of
+</p>
+<p>
+     If you are on a <strong>non-standard platform or environment</strong> there are a lot of
      <a href="http://foswiki.org/Support/SupplementalDocuments">supplemental documents</a> on Foswiki.org
-    </li>
-    <li>
-      <b>If you get stuck</b> there is a lot of support available at the
+</p>
+<p>
+      <strong>If you get stuck</strong> there is a lot of support available at the
       <a href="http://foswiki.org/Support/WebHome">Support forum</a>.
-     </li>
-    </ul>
+</p>
    </div><!--/foswikiLeft-->
    <div class="foswikiLeft" style="width:45%; margin-left:1em;">Explanation of colours and symbols:
     <ul style="margin-top:0;">
@@ -39,4 +37,4 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
    </ul>
  </div><!--/foswikiLeft -->
  <br class="foswikiClear" />
-</div><!--/foswikiHelp-->
+
