--- a/core/lib/Foswiki/Configure/resources/readonlytab.html
+++ b/core/lib/Foswiki/Configure/resources/readonlytab.html
@@ -1,4 +1,2 @@
-<div class='foswikiHelp'>
-This tab contains read-only information about your web server. It is mainly
+This section contains read-only information about your web server. It is mainly
 used for checking your server setup.
-</div>
