Item1772: use tables for displaying data so that it is better readable on small screens
git-svn-id: http://svn.foswiki.org/trunk@4331 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -13,6 +13,7 @@
  <link type="image/x-icon" rel="shortcut icon" href="configure?action=resource;resource=favicon.ico" />
  <style type="text/css">
   %INCLUDE{styles.css}%
+  %INCLUDE{pattern.css}%
  </style>
  <script language="JavaScript" type="text/javascript">//<!--
   %INCLUDE{foswikiStyles.js}%
