Item1772: fixed EXPERT. Looking good. Still need to work out how to do separate tabs for extensions, though.
git-svn-id: http://svn.foswiki.org/trunk@4343 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -37,9 +37,9 @@
          <div id="patternTopic">
           <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
 <h1>Configuration</h1>
-<div class="expert foswikiRight" style="display:none">
- <input type="button" class="expert" value="Hide EXPERT options" onclick="toggleExpertsMode()"/>
+<div class="configureExpert foswikiRight" style="display:none">
+ <input type="button" class="configureExpert" value="Hide EXPERT options" onclick="toggleExpertsMode()"/>
 </div>
-<div class="notExpert foswikiRight">
- <input type="button" class="notExpert" value="Show EXPERT options" onclick="toggleExpertsMode()"/>
+<div class="configureNotExpert foswikiRight">
+ <input type="button" class="configureNotExpert" value="Show EXPERT options" onclick="toggleExpertsMode()"/>
 </div>
