Item1772: improve display of values inside tables by detecting if a section has any values; some style changes
git-svn-id: http://svn.foswiki.org/trunk@4344 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/footer.html
+++ b/core/lib/Foswiki/Configure/resources/footer.html
@@ -9,7 +9,7 @@
   </div><!-- /patternScreen-->
  </div><!-- /patternNoViewPage -->
  <div id="ttDelta" class="configureTooltip">
- Click to reset to the default value, which is:&nbsp;
+Reset to the default value, which is:&nbsp;
  </div>
 </body>
 </html>
