--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -38,8 +38,8 @@
           <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
 <h1>Configuration</h1>
 <div class="configureExpert foswikiRight" style="display:none">
- <input type="button" class="configureExpert" value="Hide EXPERT options" onclick="toggleExpertsMode()"/>
+ <input type="button" class="foswikiButton" value="Hide EXPERT options" />
 </div>
-<div class="configureNotExpert foswikiRight">
- <input type="button" class="configureNotExpert" value="Show EXPERT options" onclick="toggleExpertsMode()"/>
+<div class="configureNotExpert foswikiRight" style="display:none" class="foswikiMakeVisible">
+ <input type="button" class="foswikiButton" value="Show EXPERT options" />
 </div>
