--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -32,7 +32,7 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
       highlighted.</li>
      <li><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
       indicator that something that is wrong.</li>
-     <li><span class="configureExpert configureNotExpert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
+     <li><span class="expert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
     </li>
    </ul>
  </div><!--/foswikiLeft -->
