Item1772: improve display of values inside js tooltip
git-svn-id: http://svn.foswiki.org/trunk@4345 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/footer.html
+++ b/core/lib/Foswiki/Configure/resources/footer.html
@@ -8,8 +8,6 @@
    </div><!-- /patternPageShadow-->
   </div><!-- /patternScreen-->
  </div><!-- /patternNoViewPage -->
- <div id="ttDelta" class="configureTooltip">
-Reset to the default value, which is:&nbsp;
- </div>
+ <div id="ttDelta" class="configureTooltip">Reset to the default value, which is:<br /></div>
 </body>
 </html>
