--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -24,17 +24,18 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
       <a href="http://foswiki.org/Support/WebHome">Support forum</a>.
 </p>
    </div><!--/foswikiLeft-->
-   <div class="foswikiLeft" style="width:45%; margin-left:1em;">Explanation of colours and symbols:
-    <ul style="margin-top:0;">
-     <li>Settings marked <span class='configureMandatory'>like this</span> are required
-      (they must have a value).</li>
-     <li><span class='configureError'>Errors</span> in your configuration will be
-      highlighted.</li>
-     <li><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
-      indicator that something that is wrong.</li>
-     <li><span class="expert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
-    </li>
-   </ul>
+   <div class="foswikiLeft" style="width:45%; margin-left:1em;">
+   <div class="foswikiHelp">
+   <strong>Explanation of colours and symbols:</strong>
+    <p>Settings marked <span class='configureMandatory'>like this</span> are required
+      (they must have a value).</p>
+     <p><span class='configureError'>Errors</span> in your configuration will be
+      highlighted.</p>
+     <p><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
+      indicator that something that is wrong.</p>
+     <p><span class="expert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
+    </p>
+    </div>
  </div><!--/foswikiLeft -->
  <br class="foswikiClear" />
 
