Item1772: got subtabs working. Needs Arthur's magic touch to make them a bit less ugly, though. See the Extensions tab.
git-svn-id: http://svn.foswiki.org/trunk@4377 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -21,7 +21,7 @@
   %INCLUDE{scripts.js}%
   //-->
  </script>
-<body class="introduction">
+<body class="Introduction" id="Root">
  <script language="JavaScript" type="text/javascript">//<!--
   %INCLUDE{wz_tooltip.js}%
   //-->
