Item1772: Support Expand/Close all to facilitate searching
git-svn-id: http://svn.foswiki.org/trunk@4400 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -36,6 +36,8 @@
         <div id="patternMainContents">
          <div id="patternTopic">
           <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
+<div class="foswikiRight">
+ <input type="button" class="foswikiButton" value="Expand/Close All" title="Toggle display of all options; useful for searching" onclick='toggleHiddenDivs()' /></div>
 <h1>Configuration</h1>
 <div class="configureExpert foswikiRight" style="display:none">
  <input type="button" class="foswikiButton" value="Hide EXPERT options" />
