Item1772: use javascript to show highlight in menu (no tabs.css needed); use icons for warn status (error status still to do)
git-svn-id: http://svn.foswiki.org/trunk@4430 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -30,12 +30,14 @@
   <div id="patternScreen">
    <div id="patternPageShadow">
     <div id="patternPage">
-     <div id="patternOuter">
-      <div id="patternFloatWrap">
-       <div id="patternMain">
-        <div id="patternMainContents">
-         <div id="patternTopic">
-          <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
+     <div id="patternWrapper">
+      <div id="patternOuter">
+       <div id="patternFloatWrap">
+        <div id="patternMain">
+         <div id="patternSideBar"><div id="patternClearHeaderLeft"></div><div id="patternSideBarContents"><!--SIDEBAR--></div><!-- /patternSideBarContents--></div><!-- /patternSideBar-->
+          <div id="patternMainContents">
+           <div id="patternTopic">
+            <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
 <div class="foswikiRight">
  <input type="button" class="foswikiButton" value="Expand/Close All" title="Toggle display of all options; useful for searching" onclick='toggleHiddenDivs()' /></div>
 <h1>Configuration</h1>
