--- a/core/lib/Foswiki/Configure/resources/footer.html
+++ b/core/lib/Foswiki/Configure/resources/footer.html
@@ -1,9 +1,10 @@
-         </div><!-- /patternTopic-->
-        </div><!-- /patternMainContents-->
-       </div><!-- /patternMain-->
-      </div><!-- /patternFloatWrap-->
-      <div class="clear">&nbsp;</div>
-     </div><!-- /patternOuter-->
+           </div><!-- /patternTopic-->
+          </div><!-- /patternMainContents-->
+         </div><!-- /patternMain-->
+        </div><!-- /patternFloatWrap-->
+       <div class="clear">&nbsp;</div>
+      </div><!-- /patternOuter-->
+     </div><!-- /patternWrapper-->
     </div><!-- /patternPage-->
    </div><!-- /patternPageShadow-->
   </div><!-- /patternScreen-->
