Item1772: start cleaning up html errors
git-svn-id: http://svn.foswiki.org/trunk@4435 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/footer.html
+++ b/core/lib/Foswiki/Configure/resources/footer.html
@@ -5,10 +5,10 @@
        <div class="clear">&nbsp;</div>
       </div><!-- /patternOuter-->
      </div><!-- /patternWrapper-->
+     <div id="patternTopBar"><!-- <div id="patternTopBarContents">TOP BAR</div> --></div>
     </div><!-- /patternPage-->
    </div><!-- /patternPageShadow-->
   </div><!-- /patternScreen-->
- </div><!-- /patternNoViewPage -->
  <div id="ttDelta" class="configureTooltip">Reset to the default value, which is:<br /></div>
 </body>
 </html>
