--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -31,7 +31,7 @@ register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPA
      <p><span class='configureError'>Errors</span> in your configuration will be
       highlighted.</p>
      <p><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
-      indicator that something that is wrong.</p>
+      indicator that something is wrong.</p>
      <p><span class="expert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
     </p>
     </div>
