Item1772: improve javascript for opening sub tabs so that the first tab is opened by default, and after switching back and forth the last opened sub tab is remembered; added twisty to long Web Server Environment strings (notably COOKIE that messed up the table on smaller screens)
git-svn-id: http://svn.foswiki.org/trunk@4447 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/header.html
+++ b/core/lib/Foswiki/Configure/resources/header.html
@@ -41,7 +41,7 @@
            <img src="%SCRIPTNAME%?action=resource;resource=foswiki-logo-slogan.png" class="logo" alt="Foswiki logo" />
             <div id="patternTopic">
 <div class="foswikiRight">
-<input type="button" class="foswikiButton" value="Expand/Close All" title="Toggle display of all options; useful for searching" onclick='toggleHiddenDivs()' /></div>
+<input type="button" class="foswikiButton configureToggleAll" value="Expand/Close All" title="Toggle display of all options; useful for searching" /></div>
 <h1>Configuration</h1>
 <div class="configureExpert foswikiRight" style="display:none"><input type="button" class="foswikiButton" value="Hide EXPERT options" /></div>
 <div class="configureNotExpert foswikiRight foswikiMakeVisible" style="display:none"><input type="button" class="foswikiButton" value="Show EXPERT options" /></div>
