Item1772: major UI update using FreeMarker templates (parsed by simple parser)
git-svn-id: http://svn.foswiki.org/trunk@4546 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -1,40 +1,27 @@
- <div class="foswikiLeft" style="width:45%;">
-<p><strong>If your Foswiki site is already working</strong>, continue to
-    <a rel="nofollow" onmouseover="Tip(getTip('navAway'))" onmouseout="UnTip()" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/WebHome">
-browse to the Foswiki WebHome</a>.
-<br />
-You will now need to consider how you are going to manage
-authentication and access control. See the reference manual
-sections on <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserAuthentication">
+%INCLUDE{legend.html}%
+
+<h3>If your Foswiki site is already working</h3>
+<p>You will now need to consider how you are going to manage
+authentication and access control.<br />
+See the reference manual sections on <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserAuthentication">
 authentication</a> and
 <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/AccessControl">
-access control</a>, and the 'Security' section.
-</p>
-<p>To become an <strong>administrator</strong> you need to first <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserRegistration">
+access control</a>, and the 'Security' section.</p>
+
+<p>Continue to <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/WebHome">
+browse to the Foswiki WebHome</a>.</p>
+
+<h3>How to become an administrator</h3>
+<p>You need to first <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%SYSTEMWEB%/UserRegistration">
 register</a> as a normal user and then goto <a rel="nofollow" href="%SCRIPTURLPATH%/view%SCRIPTSUFFIX%/%USERSWEB%/%ADMINGROUP%">
- %ADMINGROUP%</a> and add that user to the GROUP setting (follow the text in yellow).
-</p>
-<p>
-     If you are on a <strong>non-standard platform or environment</strong> there are a lot of
-     <a href="http://foswiki.org/Support/SupplementalDocuments">supplemental documents</a> on Foswiki.org
-</p>
-<p>
-      <strong>If you get stuck</strong> there is a lot of support available at the
-      <a href="http://foswiki.org/Support/WebHome">Support forum</a>.
-</p>
-   </div><!--/foswikiLeft-->
-   <div class="foswikiLeft" style="width:45%; margin-left:1em;">
-   <div class="foswikiHelp">
-   <strong>Explanation of colours and symbols:</strong>
-    <p>Settings marked <span class='configureMandatory'>like this</span> are required
-      (they must have a value).</p>
-     <p><span class='configureError'>Errors</span> in your configuration will be
-      highlighted.</p>
-     <p><span class='configureWarn'>Warnings</span> are non-fatal, but are often a good
-      indicator that something is wrong.</p>
-     <p><span class="expert">Expert settings</span> are for expert use only. You should not fiddle with them unless you have read all the documentation first. Expert options are hidden unless you click the "Show EXPERT options" button
-    </p>
-    </div>
- </div><!--/foswikiLeft -->
- <br class="foswikiClear" />
+%ADMINGROUP%</a> and add that user to the GROUP setting (follow the text in yellow).</p>
+
+<h3>If you are on a non-standard platform or environment</h3>
+There are a lot of <a href="http://foswiki.org/Support/SupplementalDocuments">supplemental documents</a> on Foswiki.org</p>
+
+<h3>If you get stuck</h3>
+<p>There is a lot of support available at the
+<a href="http://foswiki.org/Support/WebHome">Support forum</a>.</p>
+
+<br class="foswikiClear" />
 
