Item4673: improve layout of feedback screen (installing extensions)
git-svn-id: http://svn.foswiki.org/trunk@5525 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/legend.html
+++ b/core/lib/Foswiki/Configure/resources/legend.html
@@ -4,19 +4,19 @@
 			<th colspan='2'>Explanation of colours and symbols</th>
 		</tr>
 		<tr>
-			<td><div class='configureExample'>{DefaultUrlHost}&nbsp;<span class='configureMandatory'>required</span></div></td>
+			<td><div class='configureMessageBox'>{DefaultUrlHost}&nbsp;<span class='configureMandatory'>required</span></div></td>
 			<td><strong>Required settings</strong>Must have a value</td>
 		</tr>
 		<tr>
-			<td><div class='configureExample foswikiAlert configureError'><span><strong>Error</strong></div></td>
+			<td><div class='configureMessageBox foswikiAlert configureError'><span><strong>Error</strong></div></td>
 			<td><strong>Errors</strong>Must be fixed</td>
 		</tr>
 		<tr>
-			<td><div class='configureExample foswikiAlert configureWarn'><span><strong>Warning</strong></div></td>
+			<td><div class='configureMessageBox foswikiAlert configureWarn'><span><strong>Warning</strong></div></td>
 			<td><strong>Warnings</strong>Non-fatal, but often a good indicator that something is wrong</td>
 		</tr>
 		<tr>
-			<td><div class='configureExample configureExpertExample'>{Validation}{Method}</div></td>
+			<td><div class='configureMessageBox foswikiAlert configureExpertExample'>{Validation}{Method}</div></td>
 			<td><strong>Expert settings</strong>For expert use only. You should not fiddle with them unless you have read all the documentation first.</td>
 		</tr>
 	</table>
