Item2412: FoswikiImage plugin. Fix unable to select/insert an image when only one image attachment present; adjust image insert dialogue layout help text to be more compact; increase image insert dialogue window size, to avoid preview of image covering insert/cancel buttons
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5628 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikiimage/image.htm
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikiimage/image.htm
@@ -35,7 +35,7 @@
          </tr>
         </table>
        </td>
-       <td colspan="2">
+       <td rowspan="0" valign="top" colspan="2">
 		{#foswikiimage_dlg.img_url_help}
        </td>
       </tr>
