--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
       <title>{#foswikibuttons_dlg.attach_dialog_title}</title>
@@ -15,10 +15,9 @@
           <fieldset>
               <legend>{#foswikibuttons_dlg.fieldset_general_tab}</legend>
               <div class="error">
-                  {#foswikibuttons_dlg.attach_error_autoinc}
+                  <p>{#foswikibuttons_dlg.attach_error_autoinc}</p>
               </div>
           </fieldset>
-          <br/>
           <div style="float: right">
               <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
           </div>
