Item1462: Provide a form field that attach.js expects to be there
git-svn-id: http://svn.foswiki.org/branches/Release01x00@5701 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach_error_autoinc.htm
@@ -19,6 +19,7 @@
               </div>
           </fieldset>
           <div style="float: right">
+              <input type="hidden" name="topic" value="" id="upload_form_topic"/>
               <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
           </div>
       </form>
