Item8662: don't hide expert settings if they have an error or warning. Replaced br class="foswikiClear" by p because of faulty rendering of Google Chrome.
git-svn-id: http://svn.foswiki.org/trunk@6650 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/lib/Foswiki/Configure/resources/intro.html
+++ b/core/lib/Foswiki/Configure/resources/intro.html
@@ -23,5 +23,5 @@ There are a lot of <a href="http://foswiki.org/Support/SupplementalDocuments">su
 <p>There is a lot of support available at the
 <a href="http://foswiki.org/Support/WebHome">Support forum</a>.</p>
 
-<br class="foswikiClear" />
+<p class="foswikiClear"></p>
 
