Item2125: Change attach dialogue button text from 'cancel' to 'close'
git-svn-id: http://svn.foswiki.org/trunk@7907 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach.htm
+++ b/TinyMCEPlugin/pub/System/TinyMCEPlugin/tinymce/jscripts/tiny_mce/plugins/foswikibuttons/attach.htm
@@ -35,7 +35,7 @@
                 <input type="button" id="insert" name="insert" value="{#foswikibuttons_dlg.insert_attachment_link}" onclick="AttachDlg.insertLink();" />
               </div>
               <div style="float: right">
-                <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+                <input type="button" id="cancel" name="close" value="{#foswikibuttons_dlg.close}" onclick="tinyMCEPopup.close();" />
               </div>
             </fieldset>
             <label>{#foswikibuttons_dlg.attach_help}</label>
@@ -69,7 +69,7 @@
                 <input type="submit" id="insert" name="insert" value="{#foswikibuttons_dlg.upload}" />
               </div>
               <div style="float: right">
-                <input type="button" id="cancel" name="cancel" value="{#cancel}" onclick="tinyMCEPopup.close();" />
+                <input type="button" id="cancel" name="close" value="{#foswikibuttons_dlg.close}" onclick="tinyMCEPopup.close();" />
               </div>
               <br clear="all" />
               <iframe name="status_frame" style="display: block" width="100%" height="50px">
